# Advance-Prog

./: CMakeLists.txt  mainClient.cpp  mainServer.cpp  makefile  to-do
Source/: GlobalInfo.cpp  GlobalInfo.h  ThreadManagement.cpp  ThreadManagement.h  mainClient.cpp  mainServer.cpp
Source/Basic/: Point.cpp  Point.h  Recognizable.cpp  Recognizable.h  WayPasser.cpp  WayPasser.h
Source/Basic/Block/: Block.cpp  Block.h  MatrixBlock.cpp  MatrixBlock.h
Source/Cab/: TaxiCenter.cpp  TaxiCenter.h  TaxiCenterHelp.cpp  TaxiCenterHelp.h
Source/Cab/Vehicle/: Cab.cpp  Cab.h  LuxuryCab.cpp  LuxuryCab.h  StandardCab.cpp  StandardCab.h
Source/Control/: MainFlow.cpp  MainFlow.h
Source/Driver/: Client.cpp  Client.h  Driver.cpp  Driver.h
Source/Driver/Tracker/: KilometersPassedTracker.cpp  KilometersPassedTracker.h  SatisfactionTracker.cpp  SatisfactionTracker.h
Source/Input/: InputManager.cpp  InputManager.h
Source/Map/: CityMap.cpp  CityMap.h  LocationDetector.cpp  LocationDetector.h
Source/Movement/: MovementListener.cpp  MovementListener.h  MovementNotifier.cpp  MovementNotifier.h
Source/Ride/: Passenger.cpp  Passenger.h  Ride.cpp  Ride.h
Source/Ride/Navigation/: BFS.cpp  BFS.h  Navigation.cpp  Navigation.h  PathCalculator.cpp  PathCalculator.h
Source/Socket/: Socket.cpp  Socket.h
Source/Socket/Tcp/: Tcp.cpp  Tcp.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
Source/Socket/Udp/: Udp.cpp  Udp.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
Source/ThreadControl/: GlobalInfo.cpp  GlobalInfo.h  ThreadManagement.cpp  ThreadManagement.h
Source/ThreadPool/: CalcPath.cpp  CalcPath.h  Job.cpp  Job.h  ThreadPool.cpp  ThreadPool.h
